--- a/thule-shared/settings.gradle
+++ b/thule-shared/settings.gradle
@@ -7,13 +7,15 @@ pluginManagement {
 rootProject.name = "thule-shared"
 
 include "thule-data"
+include "thule-feign"
+include "thule-keycloak-test"
+include "thule-resource-server"
 include "thule-security"
-include "thule-security-oauth2"
 include "thule-test"
 include "thule-utils"
 
 include "thule-spring-boot-starter"
 include "thule-spring-boot-starter-data"
-include "thule-spring-boot-starter-security"
-include "thule-spring-boot-starter-security-oauth2"
+include "thule-spring-boot-starter-feign"
+include "thule-spring-boot-starter-resource-server"
 include "thule-spring-boot-starter-test"
