--- a/thule-authentication-service/k8s/cit.yml
+++ b/thule-authentication-service/k8s/cit.yml
@@ -63,7 +63,7 @@ spec:
             - name: KEYCLOAK_PASSWORD
               value: admin
             - name: PROXY_ADDRESS_FORWARDING
-              value: "true"
+              value: true
             - name: TZ
               value: Europe/London
             - name: ROLLOUT_TIME
