--- a/thule-authentication-service/k8s/cit.yml
+++ b/thule-authentication-service/k8s/cit.yml
@@ -62,8 +62,8 @@ spec:
               value: admin
             - name: KEYCLOAK_PASSWORD
               value: admin
-            - name: PROXY_ADDRESS_FORWARDING
-              value: true
+            - name: KEYCLOAK_FRONTEND_URL
+              value: http://piglet/thule-authentication-service
             - name: TZ
               value: Europe/London
             - name: ROLLOUT_TIME
