Added management.context-path for spring boot admin

--- a/thule-authentication-service/k8s/cit.yml
+++ b/thule-authentication-service/k8s/cit.yml
@@ -147,6 +147,8 @@ apiVersion: v1
 metadata:
   name: thule-authentication-service
   namespace: thule
+  annotations:
+    management.context-path: auth
 spec:
   type: NodePort
   ports:
