Added service-path for spring boot admin

--- a/thule-authentication-service/k8s/cit.yml
+++ b/thule-authentication-service/k8s/cit.yml
@@ -148,6 +148,7 @@ metadata:
   name: thule-authentication-service
   namespace: thule
   annotations:
+    management.context-path: auth
     service-path: auth
 spec:
   type: NodePort
