--- a/thule-authentication-service/k8s/cit.yml
+++ b/thule-authentication-service/k8s/cit.yml
@@ -149,8 +149,8 @@ metadata:
   namespace: thule
   annotations:
     health.path: "/"
-    management.context-path: auth
-    service-path: auth
+    management.context-path: "auth/"
+    service-path: "auth/"
 spec:
   type: NodePort
   ports:
