--- a/thule-authentication-service/k8s/cit.yml
+++ b/thule-authentication-service/k8s/cit.yml
@@ -148,8 +148,8 @@ metadata:
   name: thule-authentication-service
   namespace: thule
   annotations:
-    health.path: realms/master/.well-known/openid-configuration
-    management.context-path: realms/master/.well-known/openid-configuration
+    health.path: /
+    management.context-path: auth/realms/master/.well-known/openid-configuration
     service-path: auth
 spec:
   type: NodePort
