Added service-path for spring boot admin

--- a/thule-authentication-service/k8s/cit.yml
+++ b/thule-authentication-service/k8s/cit.yml
@@ -148,6 +148,7 @@ metadata:
   name: thule-authentication-service
   namespace: thule
   annotations:
+    # Spring Boot Admin metadata
     health.path: /
     management.context-path: auth/realms/master/.well-known/openid-configuration
     service-path: auth
