Added mail secrets into k8s

--- a/thule-email-service/src/main/resources/config/application-ctest.yml
+++ b/thule-email-service/src/main/resources/config/application-ctest.yml
@@ -7,6 +7,8 @@ spring:
   mail:
     host: localhost
     port: 1025
+    username: test.user
+    password: test.user
   zipkin:
     enabled: false
 
