--- a/thule-email-service/src/dtest/docker/thule-email-service-dtests/docker-compose.yml
+++ b/thule-email-service/src/dtest/docker/thule-email-service-dtests/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       JDK_JAVA_OPTIONS: -XX:InitialHeapSize=256m -XX:MaxHeapSize=256m -XX:MaxMetaspaceSize=256m
       SPRING_CLOUD_CONFIG_ENABLED: "false"
       SPRING_CLOUD_KUBERNETES_DISCOVERY_ENABLED: "false"
+      SPRING_MAIL_USERNAME: thule@serin-consultancy.co.uk
+      SPRING_MAIL_PASSWORD: 1nsleyopie
       SPRING_ZIPKIN_ENABLED: "false"
       THULE_SHARED_LOGGING_LOGSTASH_ENABLED: "false"
       THULE_SHARED_OAUTH2_RESOURCESERVER_JWS_ENABLED: "false"
