--- a/thule-email-service/k8s/cit.yml
+++ b/thule-email-service/k8s/cit.yml
@@ -53,7 +53,7 @@ spec:
                 secretKeyRef:
                   name: thule-email-service-secret
                   key: mail-username
-            - name: SPRING_MAIL_USERNAME
+            - name: SPRING_MAIL_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: thule-email-service-secret
