--- a/thule-microservice-deployment/src/main/k8s/apply/thule-secrets.yml
+++ b/thule-microservice-deployment/src/main/k8s/apply/thule-secrets.yml
@@ -7,4 +7,8 @@ type: Opaque
 data:
   mail-username: dGh1bGVAc2VyaW4tY29uc3VsdGFuY3kuY28udWs=
   mail-password: MW5zbGV5b3BpZQ==
+  thule-peopleservice-datasource-app-username: dGh1bGUK
+  thule-peopleservice-datasource-app-password: dGh1bGUK
+  thule-peopleservice-datasource-owner-username: cm9vdAo=
+  thule-peopleservice-datasource-owner-password: cm9vdAo=
 ---
