Added database secrets into k8s

--- a/thule-people-service/src/dtest/docker/thule-people-service-dtests/docker-compose.yml
+++ b/thule-people-service/src/dtest/docker/thule-people-service-dtests/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: root
       SPRING_FLYWAY_ENABLED: "false"
+      SPRING_FLYWAY_USERNAME: root
+      SPRING_FLYWAY_PASSWORD: root
       SPRING_ZIPKIN_ENABLED: "false"
       THULE_PEOPLESERVICE_MYSQL_HOST: mysql
       THULE_SHARED_LOGGING_LOGSTASH_ENABLED: "false"
