--- a/thule-people-service/k8s/cit.yml
+++ b/thule-people-service/k8s/cit.yml
@@ -48,10 +48,30 @@ spec:
           env:
             - name: JDK_JAVA_OPTIONS
               value: -XX:InitialHeapSize=256m -XX:MaxHeapSize=256m -XX:MaxMetaspaceSize=256m
-            - name: SPRING_PROFILES_ACTIVE
-              value: cit
             - name: THULE_SHARED_OAUTH2_RESOURCESERVER_JWS_ENABLED
               value: "false"
+            - name: SPRING_DATASOURCE_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: thule-secrets
+                  key: thule-peopleservice-datasource-app-username
+            - name: SPRING_DATASOURCE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: thule-secrets
+                  key: thule-peopleservice-datasource-app-password
+            - name: SPRING_FLYWAY_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: thule-secrets
+                  key: thule-peopleservice-datasource-owner-username
+            - name: SPRING_FLYWAY_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: thule-secrets
+                  key: thule-peopleservice-datasource-owner-password
+            - name: SPRING_PROFILES_ACTIVE
+              value: cit
             - name: TZ
               value: Europe/London
             - name: ROLLOUT_TIME
