Removed use of gmail from docker tests

--- a/thule-email-service/src/dtest/docker/thule-email-service-dtests/docker-compose.yml
+++ b/thule-email-service/src/dtest/docker/thule-email-service-dtests/docker-compose.yml
@@ -7,8 +7,7 @@ services:
       JDK_JAVA_OPTIONS: -XX:InitialHeapSize=256m -XX:MaxHeapSize=256m -XX:MaxMetaspaceSize=256m
       SPRING_CLOUD_CONFIG_ENABLED: "false"
       SPRING_CLOUD_KUBERNETES_DISCOVERY_ENABLED: "false"
-      SPRING_MAIL_USERNAME: thule@serin-consultancy.co.uk
-      SPRING_MAIL_PASSWORD: 1nsleyopie
+      SPRING_MAIL_HOST: mailhog
       SPRING_ZIPKIN_ENABLED: "false"
       THULE_SHARED_LOGGING_LOGSTASH_ENABLED: "false"
       THULE_SHARED_OAUTH2_RESOURCESERVER_JWS_ENABLED: "false"
@@ -17,6 +16,14 @@ services:
       - thule-email-service
     ports:
       - 9095:8080
+
+  ################################  Servers and Databases Required By Docker tests  ################################
+  mailhog:
+    image: mailhog/mailhog
+    networks:
+      - thule-email-service
+    ports:
+      - 1025:1025
 
 ################################  Networks  ################################
 networks:
