--- a/thule-email-service/src/main/resources/config/application.yml
+++ b/thule-email-service/src/main/resources/config/application.yml
@@ -18,13 +18,8 @@ spring:
   application:
     name: thule-email-service
   mail:
-    host: smtp.gmail.com
-    port: 587
-    properties:
-      # mail.debug: true
-      mail.smtp.auth: true
-      mail.smtp.ssl.trust: "*"
-      mail.smtp.starttls.enable: true
+    host: localhost
+    port: 1025
   security:
     oauth2:
       resourceserver:
