--- a/thule-microservice-deployment/src/main/k8s/apply/thule-secrets.yml
+++ b/thule-microservice-deployment/src/main/k8s/apply/thule-secrets.yml
@@ -5,6 +5,12 @@ metadata:
   namespace: thule
 type: Opaque
 data:
+  thule-authenticationservice-datasource-app-username: a2V5Y2xvYWs=
+  thule-authenticationservice-datasource-app-password: a2V5Y2xvYWs=
+  thule-authenticationservice-datasource-owner-username: cm9vdA==
+  thule-authenticationservice-datasource-owner-password: cm9vdA==
+  thule-authenticationservice-keycloak-admin-username: YWRtaW4=
+  thule-authenticationservice-keycloak-admin-password: YWRtaW4=
   thule-emailservice-mail-username: dGh1bGVAc2VyaW4tY29uc3VsdGFuY3kuY28udWs=
   thule-emailservice-mail-password: MW5zbGV5b3BpZQ==
   thule-peopleservice-datasource-app-username: dGh1bGU=
