--- a/thule-microservice-deployment/src/main/k8s/apply/thule-secrets.yml
+++ b/thule-microservice-deployment/src/main/k8s/apply/thule-secrets.yml
@@ -1,7 +1,7 @@
 kind: Secret
 apiVersion: v1
 metadata:
-  name: thule-secrets
+  name: thule-application-secrets
   namespace: thule
 type: Opaque
 data:
