--- a/thule-authentication-service/build.gradle
+++ b/thule-authentication-service/build.gradle
@@ -17,6 +17,7 @@ plugins {
     id "maven-publish"
     id "org.asciidoctor.convert" version "2.4.0"
     id "org.sonarqube" version "2.8"
+    id "org.springframework.boot" version "${springBootVersion}"
 }
 apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 
@@ -46,15 +47,13 @@ dependencies {
     compileOnly("org.projectlombok:lombok")
 
     implementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
-    implementation platform("org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR2")
+    implementation platform("org.springframework.cloud:spring-cloud-dependencies:Hoxton.SR3")
+    implementation("uk.co.serin.thule:thule-spring-boot-starter:${thuleSharedVersion}")
+    implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
+    implementation("org.springframework.boot:spring-boot-starter-webflux")
 
     itestImplementation("uk.co.serin.thule:thule-spring-boot-starter-feign:${thuleSharedVersion}")
     itestImplementation("uk.co.serin.thule:thule-spring-boot-starter-resource-server:${thuleSharedVersion}")
     itestImplementation("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
-    itestImplementation("org.springframework.boot:spring-boot-starter-webflux")
     itestImplementation("org.springframework.security:spring-security-oauth2-client")
-
-    dtestImplementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
-    dtestImplementation("uk.co.serin.thule:thule-spring-boot-starter-test:${thuleSharedVersion}")
-    dtestImplementation("org.springframework.boot:spring-boot-starter-webflux")
 }
