--- a/thule-authentication-service/src/main/resources/config/application-itest.yml
+++ b/thule-authentication-service/src/main/resources/config/application-itest.yml
@@ -11,11 +11,19 @@ spring:
     loadbalancer:
       ribbon:
         enabled: false
+  main:
+    web-application-type: SERVLET
   security:
     oauth2:
       resourceserver:
         jwt:
           issuer-uri: http://localhost:8080/auth/realms/thule-test
+
+# Thule configuration
+thule:
+  keycloak:
+    base-url: http://localhost:8080
+    realm: thule-test
 
 ######################################### NESTED INTEGRATION TEST PROFILES #######################################
 ---
