--- a/thule-gateway-service/k8s/cit.yml
+++ b/thule-gateway-service/k8s/cit.yml
@@ -76,6 +76,9 @@ spec:
         - ip: 192.168.0.102
           hostnames:
             - pooh
+        - ip: 192.168.0.104
+          hostnames:
+            - piglet
 ---
 kind: HorizontalPodAutoscaler
 apiVersion: autoscaling/v2beta1
